--- a/DiceRoller/MainWindow.xaml
+++ b/DiceRoller/MainWindow.xaml
@@ -44,7 +44,7 @@
         <TextBlock Grid.Row="0" Grid.Column ="7" Style="{StaticResource CommonStyle}">D100</TextBlock>-->
 
         <TextBlock Grid.Row="1" Style="{StaticResource CommonStyle}">Number of dice</TextBlock>
-        <TextBox Grid.Row="1" Grid.Column ="1" Style="{StaticResource CommonStyle}" Text="{Binding Dice4Number}"></TextBox>
+        <TextBox Grid.Row="1" Grid.Column ="1" Style="{StaticResource CommonStyle}" Text="{Binding diceNumber}"></TextBox>
         <!--<TextBox Grid.Row="1" Grid.Column ="2" Style="{StaticResource CommonStyle}" Text="{Binding Dice6Number}"></TextBox>
         <TextBox Grid.Row="1" Grid.Column ="3" Style="{StaticResource CommonStyle}" Text="{Binding Dice8Number}"></TextBox>
         <TextBox Grid.Row="1" Grid.Column ="4" Style="{StaticResource CommonStyle}" Text="{Binding Dice10Number}"></TextBox>
