--- a/DiceRoller/MainWindow.xaml
+++ b/DiceRoller/MainWindow.xaml
@@ -27,40 +27,29 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
-            <!--<ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>-->
         </Grid.ColumnDefinitions>
         <TextBlock Grid.Row="0" Grid.Column ="0" Style="{StaticResource CommonStyle}">Type of dice</TextBlock>
-        <TextBlock Grid.Row="0" Grid.Column ="1" Style="{StaticResource CommonStyle}">D4</TextBlock>
-        <!--<TextBlock Grid.Row="0" Grid.Column ="2" Style="{StaticResource CommonStyle}">D6</TextBlock>
-        <TextBlock Grid.Row="0" Grid.Column ="3" Style="{StaticResource CommonStyle}">D8</TextBlock>
-        <TextBlock Grid.Row="0" Grid.Column ="4" Style="{StaticResource CommonStyle}">D10</TextBlock>
-        <TextBlock Grid.Row="0" Grid.Column ="5" Style="{StaticResource CommonStyle}">D12</TextBlock>
-        <TextBlock Grid.Row="0" Grid.Column ="6" Style="{StaticResource CommonStyle}">D20</TextBlock>
-        <TextBlock Grid.Row="0" Grid.Column ="7" Style="{StaticResource CommonStyle}">D100</TextBlock>-->
+        <!--<TextBlock Grid.Row="0" Grid.Column ="1" Style="{StaticResource CommonStyle}">D4</TextBlock>-->
+
+
+        <ItemsControl Grid.Column="1" ItemsSource="{Binding Path=nameList}">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <UniformGrid  Columns="7"></UniformGrid>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+        </ItemsControl>
+
 
         <TextBlock Grid.Row="1" Style="{StaticResource CommonStyle}">Number of dice</TextBlock>
         <TextBox Grid.Row="1" Grid.Column ="1" Style="{StaticResource CommonStyle}" Text="{Binding diceNumber}"></TextBox>
-        <!--<TextBox Grid.Row="1" Grid.Column ="2" Style="{StaticResource CommonStyle}" Text="{Binding Dice6Number}"></TextBox>
-        <TextBox Grid.Row="1" Grid.Column ="3" Style="{StaticResource CommonStyle}" Text="{Binding Dice8Number}"></TextBox>
-        <TextBox Grid.Row="1" Grid.Column ="4" Style="{StaticResource CommonStyle}" Text="{Binding Dice10Number}"></TextBox>
-        <TextBox Grid.Row="1" Grid.Column ="5" Style="{StaticResource CommonStyle}" Text="{Binding Dice12Number}"></TextBox>
-        <TextBox Grid.Row="1" Grid.Column ="6" Style="{StaticResource CommonStyle}" Text="{Binding Dice20Number}"></TextBox>
-        <TextBox Grid.Row="1" Grid.Column ="7" Style="{StaticResource CommonStyle}" Text="{Binding Dice100Number}"></TextBox>-->
+
 
         <Button Grid.Row="2" Style="{StaticResource CommonStyle}" Command="{Binding RollCommand}">Roll</Button>
-        <TextBlock Grid.Row="2" Grid.Column ="1" Style="{StaticResource CommonStyle}" Text="{Binding result}"></TextBlock>
-        <!--<TextBlock Grid.Row="2" Grid.Column ="2" Style="{StaticResource CommonStyle}" Text="{Binding Dice6Result}"></TextBlock>
-        <TextBlock Grid.Row="2" Grid.Column ="3" Style="{StaticResource CommonStyle}" Text="{Binding Dice8Result}"></TextBlock>
-        <TextBlock Grid.Row="2" Grid.Column ="4" Style="{StaticResource CommonStyle}" Text="{Binding Dice10Result}"></TextBlock>
-        <TextBlock Grid.Row="2" Grid.Column ="5" Style="{StaticResource CommonStyle}" Text="{Binding Dice12Result}"></TextBlock>
-        <TextBlock Grid.Row="2" Grid.Column ="6" Style="{StaticResource CommonStyle}" Text="{Binding Dice20Result}"></TextBlock>
-        <TextBlock Grid.Row="2" Grid.Column ="7" Style="{StaticResource CommonStyle}" Text="{Binding Dice100Result}"></TextBlock>-->
-        <Button Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="8" Style="{StaticResource CommonStyle}">Clear all</Button>
+        <ScrollViewer Grid.Row="2" Grid.Column ="1">
+            <TextBlock Style="{StaticResource CommonStyle}" Text="{Binding result}"/>
+        </ScrollViewer>
 
+        <Button Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="8" Style="{StaticResource CommonStyle}">Clear all</Button>
     </Grid>
 </Window>
