--- a/DiceRoller/MainWindow.xaml
+++ b/DiceRoller/MainWindow.xaml
@@ -22,7 +22,6 @@
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition ></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
@@ -54,10 +53,7 @@
 
 
         <Button Grid.Row="2" Style="{StaticResource CommonStyle}" Command="{Binding RollCommand}">Roll</Button>
-        <!--<ScrollViewer Grid.Row="2" Grid.Column ="1">
-            <TextBlock Style="{StaticResource CommonStyle}" Text="{Binding result}"/>
-        </ScrollViewer>-->
-        <ListBox Grid.Row="2" Grid.Column ="1" ItemsSource="{Binding itemDiceList}">
+        <ListBox Grid.Row="2" Grid.Column ="1" ItemsSource="{Binding itemDiceList}" ScrollViewer.VerticalScrollBarVisibility="Disabled">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
                     <UniformGrid Columns="7"></UniformGrid>
@@ -65,12 +61,11 @@
             </ItemsControl.ItemsPanel>
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <TextBlock Text="{Binding Path=result}"></TextBlock>
+                    <ScrollViewer>
+                        <TextBlock Text="{Binding Path=result}"></TextBlock>
+                    </ScrollViewer>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
-
-
-        <Button Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="8" Style="{StaticResource CommonStyle}">Clear all</Button>
     </Grid>
 </Window>
