--- a/DiceRoller/MainWindow.xaml
+++ b/DiceRoller/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:DiceRoller"
         xmlns:vm="clr-namespace:DiceRoller.VewModel;assembly=DiceRoller.VewModel"
         mc:Ignorable="d"
-        Title="MainWindow" Height="250" Width="675">
+        Title="MainWindow" Height="250" Width="350">
     <Window.DataContext>
         <vm:DiceRollViewModel/>
     </Window.DataContext>
@@ -19,26 +19,12 @@
             </Style>
         </Grid.Resources>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition ></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-        </Grid.ColumnDefinitions>
-        <TextBlock Grid.Row="0" Grid.Column ="0" Style="{StaticResource CommonStyle}">Type of dice</TextBlock>
 
-        <ListBox Grid.Column="1" ItemsSource="{Binding itemDiceList}" DisplayMemberPath="name">
-            <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <UniformGrid Columns="7"></UniformGrid>
-                </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
-        </ListBox>
-
-        <TextBlock Grid.Row="1" Style="{StaticResource CommonStyle}">Number of dice</TextBlock>
-        <ListBox Grid.Row="1" Grid.Column ="1" ItemsSource="{Binding itemDiceList}">
+        <Button Grid.Row="1" Style="{StaticResource CommonStyle}" Command="{Binding RollCommand}">Roll</Button>
+        <ListBox Grid.Row="0"  ItemsSource="{Binding itemDiceList}" ScrollViewer.VerticalScrollBarVisibility="Disabled">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
                     <UniformGrid Columns="7"></UniformGrid>
@@ -46,24 +32,18 @@
             </ItemsControl.ItemsPanel>
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <TextBox Text="{Binding Path=diceNumber}"></TextBox>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
-
-
-        <Button Grid.Row="2" Style="{StaticResource CommonStyle}" Command="{Binding RollCommand}">Roll</Button>
-        <ListBox Grid.Row="2" Grid.Column ="1" ItemsSource="{Binding itemDiceList}" ScrollViewer.VerticalScrollBarVisibility="Disabled">
-            <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <UniformGrid Columns="7"></UniformGrid>
-                </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <ScrollViewer>
-                        <TextBlock Text="{Binding Path=result}"></TextBlock>
-                    </ScrollViewer>
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition ></RowDefinition>
+                        </Grid.RowDefinitions>
+                        <TextBlock Grid.Row="0" Text="{Binding name}"></TextBlock>
+                        <TextBox Grid.Row="1" Text="{Binding Path=diceNumber}"></TextBox>
+                        <ScrollViewer  Grid.Row="2">
+                            <TextBlock Text="{Binding Path=result}"></TextBlock>
+                        </ScrollViewer>
+                    </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
