--- a/DiceRoller/MainWindow.xaml
+++ b/DiceRoller/MainWindow.xaml
@@ -24,7 +24,7 @@
         </Grid.RowDefinitions>
 
         <Button Grid.Row="1" Style="{StaticResource CommonStyle}" Command="{Binding RollCommand}">Roll</Button>
-        <ListBox Grid.Row="0"  ItemsSource="{Binding itemDiceList}" ScrollViewer.VerticalScrollBarVisibility="Disabled">
+        <ListBox Grid.Row="0" Style="{StaticResource CommonStyle}" ItemsSource="{Binding itemDiceList}" ScrollViewer.VerticalScrollBarVisibility="Disabled">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
                     <UniformGrid Columns="7"></UniformGrid>
@@ -38,7 +38,7 @@
                             <RowDefinition Height="Auto"></RowDefinition>
                             <RowDefinition ></RowDefinition>
                         </Grid.RowDefinitions>
-                        <TextBlock Grid.Row="0" Text="{Binding name}"></TextBlock>
+                        <TextBlock Grid.Row="0"  Text="{Binding name}"></TextBlock>
                         <TextBox Grid.Row="1" Text="{Binding Path=diceNumber}"></TextBox>
                         <ScrollViewer  Grid.Row="2">
                             <TextBlock Text="{Binding Path=result}"></TextBlock>
