--- a/DiceRoller/MainWindow.xaml
+++ b/DiceRoller/MainWindow.xaml
@@ -6,24 +6,63 @@
         xmlns:local="clr-namespace:DiceRoller"
         xmlns:vm="clr-namespace:DiceRoller.VewModel;assembly=DiceRoller.VewModel"
         mc:Ignorable="d"
-        Title="MainWindow" Height="250" Width="350">
+        Title="DiceRoller" Height="250" Width="400">
     <Window.DataContext>
         <vm:DiceRollViewModel/>
     </Window.DataContext>
+    <Window.Resources>
+        <Style TargetType="TextBlock" x:Key="Result">
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Foreground" Value="Green"></Setter>
+                </Trigger>
+                <!--<DataTrigger Binding="{Binding IsSelect}" Value="true">
+                    <Setter Property="Foreground" Value="Green"></Setter>
+                </DataTrigger>-->
+            </Style.Triggers>
+        </Style>
+
+        <Style x:Key="CommonStyle">
+            <Setter Property="Control.Margin" Value="10"></Setter>
+            <Setter Property="Control.Padding" Value="10"></Setter>
+            <Setter Property="Control.HorizontalAlignment" Value="Stretch"></Setter>
+        </Style>
+
+        <Style TargetType="Button" x:Key="Animation" BasedOn="{StaticResource CommonStyle}">
+            <Style.Triggers>
+                <EventTrigger RoutedEvent="MouseEnter">
+                    <EventTrigger.Actions>
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <DoubleAnimation Storyboard.TargetProperty="FontSize" To="15" Duration="0:0:1"></DoubleAnimation>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </EventTrigger.Actions>
+                </EventTrigger>
+                <EventTrigger RoutedEvent="MouseLeave">
+                    <EventTrigger.Actions>
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <DoubleAnimation Storyboard.TargetProperty="FontSize" To="10" Duration="0:0:1"></DoubleAnimation>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </EventTrigger.Actions>
+                </EventTrigger>
+            </Style.Triggers>
+
+        </Style>
+
+    </Window.Resources>
     <Grid ShowGridLines="True">
-        <Grid.Resources>
-            <Style x:Key="CommonStyle">
-                <Setter Property="Control.Margin" Value="10"></Setter>
-                <Setter Property="Control.Padding" Value="10"></Setter>
-                <Setter Property="Control.HorizontalAlignment" Value="Stretch"></Setter>
-            </Style>
-        </Grid.Resources>
         <Grid.RowDefinitions>
             <RowDefinition ></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <Button Grid.Row="1" Style="{StaticResource CommonStyle}" Command="{Binding RollCommand}">Roll</Button>
+        <Button Grid.Row="1" Style="{StaticResource Animation}" 
+                Command="{Binding RollCommand}" 
+                >Roll</Button>
+
         <ListBox Grid.Row="0" Style="{StaticResource CommonStyle}" ItemsSource="{Binding itemDiceList}" ScrollViewer.VerticalScrollBarVisibility="Disabled">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
@@ -41,11 +80,13 @@
                         <TextBlock Grid.Row="0"  Text="{Binding name}"></TextBlock>
                         <TextBox Grid.Row="1" Text="{Binding Path=diceNumber}"></TextBox>
                         <ScrollViewer  Grid.Row="2">
-                            <TextBlock Text="{Binding Path=result}"></TextBlock>
+                            <TextBlock Text="{Binding Path=result}" Style="{StaticResource Result}"></TextBlock>
                         </ScrollViewer>
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
+
+
     </Grid>
 </Window>
