--- a/DiceRoller/MainWindow.xaml
+++ b/DiceRoller/MainWindow.xaml
@@ -14,7 +14,7 @@
         <Style TargetType="TextBlock" x:Key="Result">
             <Style.Triggers>
                 <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Foreground" Value="Green"></Setter>
+                    <Setter Property="Foreground" Value="White"></Setter>
                 </Trigger>
                 <!--<DataTrigger Binding="{Binding IsSelect}" Value="true">
                     <Setter Property="Foreground" Value="Green"></Setter>
@@ -49,11 +49,15 @@
                     </EventTrigger.Actions>
                 </EventTrigger>
             </Style.Triggers>
-
         </Style>
 
+        <SolidColorBrush x:Key="OpacityBrush" Opacity="0.2" Color="AliceBlue" ></SolidColorBrush>
+
     </Window.Resources>
-    <Grid ShowGridLines="True">
+    <Grid>
+        <Grid.Background>
+            <ImageBrush ImageSource="Image/dndBackground.jpg"></ImageBrush>
+        </Grid.Background>
         <Grid.RowDefinitions>
             <RowDefinition ></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
@@ -61,9 +65,10 @@
 
         <Button Grid.Row="1" Style="{StaticResource Animation}" 
                 Command="{Binding RollCommand}" 
+                Background="{StaticResource OpacityBrush}"
                 >Roll</Button>
 
-        <ListBox Grid.Row="0" Style="{StaticResource CommonStyle}" ItemsSource="{Binding itemDiceList}" ScrollViewer.VerticalScrollBarVisibility="Disabled">
+        <ListBox Grid.Row="0" Style="{StaticResource CommonStyle}" Background="{StaticResource OpacityBrush}" ItemsSource="{Binding itemDiceList}" ScrollViewer.VerticalScrollBarVisibility="Disabled">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
                     <UniformGrid Columns="7"></UniformGrid>
@@ -79,7 +84,7 @@
                         </Grid.RowDefinitions>
                         <TextBlock Grid.Row="0"  Text="{Binding name}"></TextBlock>
                         <TextBox Grid.Row="1" Text="{Binding Path=diceNumber}"></TextBox>
-                        <ScrollViewer  Grid.Row="2">
+                        <ScrollViewer  Grid.Row="2" >
                             <TextBlock Text="{Binding Path=result}" Style="{StaticResource Result}"></TextBlock>
                         </ScrollViewer>
                     </Grid>
