--- a/DiceRoller/MainWindow.xaml
+++ b/DiceRoller/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:DiceRoller"
         xmlns:vm="clr-namespace:DiceRoller.VewModel;assembly=DiceRoller.VewModel"
         mc:Ignorable="d"
-        Title="DiceRoller" Height="250" Width="400">
+        Title="DiceRoller" Height="250" Width="400" ResizeMode="CanResizeWithGrip">
     <Window.DataContext>
         <vm:DiceRollViewModel/>
     </Window.DataContext>
@@ -54,44 +54,49 @@
         <SolidColorBrush x:Key="OpacityBrush" Opacity="0.2" Color="AliceBlue" ></SolidColorBrush>
 
     </Window.Resources>
-    <Grid>
-        <Grid.Background>
-            <ImageBrush ImageSource="Image/dndBackground.jpg"></ImageBrush>
-        </Grid.Background>
-        <Grid.RowDefinitions>
-            <RowDefinition ></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
-        </Grid.RowDefinitions>
+    <Viewbox>
+        <Grid>
+            <Grid.Background>
+                <ImageBrush ImageSource="Image/dndBackground.jpg"></ImageBrush>
+            </Grid.Background>
+            <Grid.LayoutTransform>
+                <ScaleTransform ScaleX="1" ScaleY="1" />
+            </Grid.LayoutTransform>
+            <Grid.RowDefinitions>
+                <RowDefinition ></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+            </Grid.RowDefinitions>
 
-        <Button Grid.Row="1" Style="{StaticResource Animation}" 
+            <Button Grid.Row="1" Style="{StaticResource Animation}" 
                 Command="{Binding RollCommand}" 
                 Background="{StaticResource OpacityBrush}"
                 >Roll</Button>
 
-        <ListBox Grid.Row="0" Style="{StaticResource CommonStyle}" Background="{StaticResource OpacityBrush}" ItemsSource="{Binding itemDiceList}" ScrollViewer.VerticalScrollBarVisibility="Disabled">
-            <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <UniformGrid Columns="7"></UniformGrid>
-                </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto"></RowDefinition>
-                            <RowDefinition Height="Auto"></RowDefinition>
-                            <RowDefinition ></RowDefinition>
-                        </Grid.RowDefinitions>
-                        <TextBlock Grid.Row="0"  Text="{Binding name}"></TextBlock>
-                        <TextBox Grid.Row="1" Text="{Binding Path=diceNumber}"></TextBox>
-                        <ScrollViewer  Grid.Row="2" >
-                            <TextBlock Text="{Binding Path=result}" Style="{StaticResource Result}"></TextBlock>
-                        </ScrollViewer>
-                    </Grid>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
+            <ListBox Grid.Row="0" Style="{StaticResource CommonStyle}" Background="{StaticResource OpacityBrush}" ItemsSource="{Binding itemDiceList}" ScrollViewer.VerticalScrollBarVisibility="Disabled">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <UniformGrid Columns="7"></UniformGrid>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"></RowDefinition>
+                                <RowDefinition Height="Auto"></RowDefinition>
+                                <RowDefinition ></RowDefinition>
+                            </Grid.RowDefinitions>
+                            <TextBlock Grid.Row="0"  Text="{Binding name}"></TextBlock>
+                            <TextBox Grid.Row="1" Text="{Binding Path=diceNumber}"></TextBox>
+                            <ScrollViewer  Grid.Row="2" >
+                                <TextBlock Text="{Binding Path=result}" Style="{StaticResource Result}"></TextBlock>
+                            </ScrollViewer>
+                        </Grid>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
 
 
-    </Grid>
+        </Grid>
+    </Viewbox>
 </Window>
