--- a/DiceRoller/MainWindow.xaml
+++ b/DiceRoller/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:DiceRoller"
         xmlns:vm="clr-namespace:DiceRoller.VewModel;assembly=DiceRoller.VewModel"
         mc:Ignorable="d"
-        Title="DiceRoller" Height="250" Width="400" ResizeMode="CanResizeWithGrip">
+        Title="DiceRoller" Height="250" Width="440" ResizeMode="CanResizeWithGrip">
     <Window.DataContext>
         <vm:DiceRollViewModel/>
     </Window.DataContext>
@@ -54,14 +54,11 @@
         <SolidColorBrush x:Key="OpacityBrush" Opacity="0.2" Color="AliceBlue" ></SolidColorBrush>
 
     </Window.Resources>
-    <Viewbox>
+    <Viewbox HorizontalAlignment="Left" VerticalAlignment="Top" Stretch="Fill">
         <Grid>
             <Grid.Background>
                 <ImageBrush ImageSource="Image/dndBackground.jpg"></ImageBrush>
             </Grid.Background>
-            <Grid.LayoutTransform>
-                <ScaleTransform ScaleX="1" ScaleY="1" />
-            </Grid.LayoutTransform>
             <Grid.RowDefinitions>
                 <RowDefinition ></RowDefinition>
                 <RowDefinition Height="Auto"></RowDefinition>
@@ -88,7 +85,7 @@
                             </Grid.RowDefinitions>
                             <TextBlock Grid.Row="0"  Text="{Binding name}"></TextBlock>
                             <TextBox Grid.Row="1" Text="{Binding Path=diceNumber}"></TextBox>
-                            <ScrollViewer  Grid.Row="2" >
+                            <ScrollViewer  Grid.Row="2" MaxHeight="75">
                                 <TextBlock Text="{Binding Path=result}" Style="{StaticResource Result}"></TextBlock>
                             </ScrollViewer>
                         </Grid>
