--- a/DiceRoller/MainWindow.xaml
+++ b/DiceRoller/MainWindow.xaml
@@ -32,7 +32,7 @@
             </Style.Triggers>
         </Style>
 
-        <Style TargetType="Button" x:Key="Animation" BasedOn="{StaticResource CommonStyle}">
+        <Style TargetType="Button" BasedOn="{StaticResource CommonStyle}">
             <Style.Triggers>
                 <EventTrigger RoutedEvent="MouseEnter">
                     <EventTrigger.Actions>
@@ -55,6 +55,12 @@
             </Style.Triggers>
         </Style>
 
+        <ControlTemplate x:Key="ButtonTemplate" TargetType="{x:Type Button}">
+            <Border BorderBrush="AliceBlue" BorderThickness="3" Opacity="0.3" CornerRadius="2"
+                    Background="AliceBlue" TextBlock.Foreground="Black">
+                <ContentPresenter RecognizesAccessKey="True" Margin="{TemplateBinding Padding}"></ContentPresenter>
+            </Border>
+        </ControlTemplate>
     </Window.Resources>
 
     <Viewbox HorizontalAlignment="Left" VerticalAlignment="Top" Stretch="Fill">
@@ -67,11 +73,12 @@
                 <RowDefinition Height="Auto"></RowDefinition>
             </Grid.RowDefinitions>
 
-            <Button Grid.Row="1" Style="{StaticResource Animation}" 
+            <Button Grid.Row="1" 
                 Command="{Binding RollCommand}" 
                 Background="{StaticResource OpacityBrush}"
                 IsDefault="True"
-                Content="Roll"/>
+                Content="Roll"
+                Template="{StaticResource ButtonTemplate}"/>
 
             <ListBox Grid.Row="0" Style="{StaticResource CommonStyle}" Background="{StaticResource OpacityBrush}" ItemsSource="{Binding itemDiceList}" ScrollViewer.VerticalScrollBarVisibility="Disabled">
                 <ItemsControl.ItemsPanel>
