--- a/DiceRoller/MainWindow.xaml
+++ b/DiceRoller/MainWindow.xaml
@@ -3,74 +3,25 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DiceRoller"
         xmlns:vm="clr-namespace:DiceRoller.ViewModel;assembly=DiceRoller.ViewModel"
         mc:Ignorable="d"
         Title="DiceRoller" Height="250" Width="440" MinHeight="250" MinWidth="440" MaxHeight="500" MaxWidth="880">
     <Window.DataContext>
-        <vm:DiceRollViewModel/>
+        <vm:DiceRollViewModel />
     </Window.DataContext>
 
     <Window.Resources>
-        <SolidColorBrush x:Key="OpacityBrush" Opacity="0.2" Color="AliceBlue" ></SolidColorBrush>
-
-        <Style x:Key="CommonStyle">
-            <Setter Property="Control.Margin" Value="10"></Setter>
-            <Setter Property="Control.Padding" Value="10"></Setter>
-            <Setter Property="Control.HorizontalAlignment" Value="Stretch"></Setter>
-            <Setter Property="Control.FontWeight" Value="Bold"></Setter>
-        </Style>
-
-        <Style TargetType="TextBlock" x:Key="Result">
-            <Style.Triggers>
-                <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Foreground" Value="White"></Setter>
-                </Trigger>
-                <DataTrigger Binding="{Binding IsError}" Value="true">
-                    <Setter Property="Foreground" Value="DarkRed"></Setter>
-                </DataTrigger>
-            </Style.Triggers>
-        </Style>
- 
-        <Style TargetType="Button" BasedOn="{StaticResource CommonStyle}">
-            <Style.Triggers>
-                <EventTrigger RoutedEvent="MouseEnter">
-                    <EventTrigger.Actions>
-                        <BeginStoryboard>
-                            <Storyboard>
-                                <DoubleAnimation Storyboard.TargetProperty="FontSize" To="15" Duration="0:0:0.5"></DoubleAnimation>
-                            </Storyboard>
-                        </BeginStoryboard>
-                    </EventTrigger.Actions>
-                </EventTrigger>
-                <EventTrigger RoutedEvent="MouseLeave">
-                    <EventTrigger.Actions>
-                        <BeginStoryboard>
-                            <Storyboard>
-                                <DoubleAnimation Storyboard.TargetProperty="FontSize" To="10" Duration="0:0:0.5"></DoubleAnimation>
-                            </Storyboard>
-                        </BeginStoryboard>
-                    </EventTrigger.Actions>
-                </EventTrigger>
-            </Style.Triggers>
-        </Style>
-
-        <ControlTemplate x:Key="ButtonTemplate" TargetType="{x:Type Button}">
-            <Border BorderBrush="AliceBlue" BorderThickness="3" Opacity="0.3" CornerRadius="2"
-                    Background="AliceBlue" TextBlock.Foreground="Red" >
-                <ContentPresenter RecognizesAccessKey="True" Margin="{TemplateBinding Padding}"></ContentPresenter>
-            </Border>
-        </ControlTemplate>
+        <ResourceDictionary Source="WindowStyles.xaml" />
     </Window.Resources>
 
     <Viewbox HorizontalAlignment="Left" VerticalAlignment="Top" Stretch="Fill">
         <Grid Height="250" Width="440">
             <Grid.Background>
-                <ImageBrush ImageSource="Image/dndBackground.jpg"></ImageBrush>
+                <ImageBrush ImageSource="Image/dndBackground.jpg" />
             </Grid.Background>
             <Grid.RowDefinitions>
-                <RowDefinition ></RowDefinition>
-                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
 
             <Button Grid.Row="1" 
@@ -83,7 +34,7 @@
             <ListBox Grid.Row="0" Style="{StaticResource CommonStyle}" Background="{StaticResource OpacityBrush}" ItemsSource="{Binding ItemDiceList}" ScrollViewer.VerticalScrollBarVisibility="Disabled">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
-                        <UniformGrid Columns="7"></UniformGrid>
+                        <UniformGrid Columns="7" />
                     </ItemsPanelTemplate>
                 </ItemsControl.ItemsPanel>
                 <ListBox.ItemTemplate>
@@ -98,7 +49,7 @@
                             <TextBlock Grid.Row="0"  Text="{Binding DiceName}"/>
                             <TextBox Grid.Row="1" Text="{Binding Path=DiceNumber, UpdateSourceTrigger=PropertyChanged}"/>
                             <ScrollViewer  Grid.Row="2" MaxHeight="75">
-                                <TextBlock Text="{Binding Path=Result}" Style="{StaticResource Result}"/>
+                                <ItemsControl ItemsSource="{Binding Result}" />
                             </ScrollViewer>
                         </Grid>
                     </DataTemplate>
